Closed Bug 1514192 Opened 6 years ago Closed 6 years ago

Oculus Touch controller's thumb stick's touched value doesn't update

Categories

(Core :: WebVR, defect)

64 Branch
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla66
Tracking Status
firefox-esr60 --- unaffected
firefox64 --- wontfix
firefox65 --- verified
firefox66 --- verified

People

(Reporter: joukosaastamoinen, Assigned: daoshengmu)

Details

(Keywords: regression, Whiteboard: [webvr])

Attachments

(1 file)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_13_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/70.0.3538.110 Safari/537.36 Steps to reproduce: 1. Load a WebVR app, eg. https://aframe.io/examples/showcase/helloworld/ 2. Enter VR 3. Open developer console 4. Touch the top of one of the thumbstick (and keep it touched) 5. Type navigator.getGamepads() 6. Inspect the touch controller's buttons[0].touched value Actual results: The touched value for the thumbstick is false. Expected results: The touched value for the thumbstick should be true.
Keywords: regression
Component: Untriaged → WebVR
Product: Firefox → Core
Whiteboard: [webvr]
For some reason, we miss the thumb touch event after the recent refactoring, https://dxr.mozilla.org/mozilla-central/rev/c2593a3058afdfeaac5c990e18794ee8257afe99/gfx/vr/service/OculusSession.cpp#167. In Oculus SDK header, they do have ovrTouch_LThumb and ovrTouch_RThumb. I will fix it shortly.
Assignee: nobody → dmu
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Pushed by dmu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/bc5282261728 Fixing Oculus Touch touch events error. r=kip
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla66
Please nominate this for Beta approval when you get a chance.
Flags: qe-verify+
Flags: needinfo?(dmu)
Comment on attachment 9034008 [details] Bug 1514192 - Fixing Oculus Touch touch events error. [Beta/Release Uplift Approval Request] Feature/Bug causing the regression: Bug 1466700 User impact if declined: The touch values of thumb stick will not be updated properly in Oculus Touch controller. Is this code covered by automated tests?: No Has the fix been verified in Nightly?: Yes Needs manual test from QE?: No If yes, steps to reproduce: List of other uplifts needed: None Risk to taking this patch: Low Why is the change risky/not risky? (and alternatives if risky): It just changes the event flags, should not cause any risk. String changes made/needed:
Flags: needinfo?(dmu)
Attachment #9034008 - Flags: approval-mozilla-beta?
Comment on attachment 9034008 [details] Bug 1514192 - Fixing Oculus Touch touch events error. [Triage Comment] Ensures that touch values of thumb stick on the Oculus Touch controller are properly updated. Approved for 65.0b9.
Attachment #9034008 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Hello! Unfortunately the QA team can not verify this bug due to our incompatibility issues with mac products. Best regards, Cristian
Flags: qe-verify+

(In reply to Cristian Comorasu [:ccomorasu], Release Desktop QA from comment #9)

Hello!

Unfortunately the QA team can not verify this bug due to our incompatibility
issues with mac products.

Best regards,
Cristian

Oculus Touch is only supported on Windows. So, we don't need to verify it on Mac OS.

Flags: needinfo?(cristian.comorasu)
QA Contact: cristian.comorasu

Sorry for the long pause and the confusion with apple devices.
I reproduced this issue using Fx 66.0a1 (2018-12-14)on Windows 10 x64 with Oculus Rift.
I can confirm this issue is fixed, I verified using Fx 66.0a1 (2019-01-23) and Fx 65.0 on the previously mentioned environment.
Cheers!

Status: RESOLVED → VERIFIED
Flags: needinfo?(cristian.comorasu)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: