Bug 1514192 - Fixing Oculus Touch touch events error. r=kip

Differential Revision: https://phabricator.services.mozilla.com/D15589